fix: CartPlayer button label spacing

--- a/client/src/styles/CartPlayer.css
+++ b/client/src/styles/CartPlayer.css
@@ -70,11 +70,18 @@
 	width: 95%;
 	margin: 0 auto;
 	border: 0.125vw solid white;
-	display: grid;
+	display: flex;
 	align-items: center;
-	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: 1fr;
+	justify-content: space-between;
 	padding: 1vw;
+}
+
+.CartPlayer_buttonContainer {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
 }
 
 .CartPlayer_tapeSlot {
@@ -99,7 +106,7 @@
 .playbackButton {
 	padding: 0;
 	border-radius: 1px;
-	width: 50%;
+	width: 2.5vw;
 	aspect-ratio: 1;
 	border: 0.125vw solid white;
 	background-color: #222222;
@@ -109,7 +116,7 @@
 .programButton {
 	padding: 0;
 	border-radius: 0.125vw;
-	width: 50%;
+	width: 2.5vw;
 	aspect-ratio: 1;
 	border: 0.125vw solid white;
 	background-color: firebrick;
@@ -119,11 +126,10 @@
 .CartPlayer_bottomContainer {
 	height: 20%;
 	width: 95%;
-	display: grid;
-	grid-template-columns: repeat(10, 1fr);
-	grid-template-rows: 1fr;
+	display: flex;
+	flex-direction: row;
 	align-items: center;
-	justify-items: center;
+	justify-content: space-between;
 	margin: 0 auto;
 	padding: 0 1vw;
 }
@@ -136,9 +142,9 @@
 }
 
 .bottomText_copyright {
-	grid-column: 1 / span 8;
 	font-family: 'Helvetica', sans-serif;
 	font-weight: 700;
+	width: 80%;
 }
 
 .CartPlayer_shadow {
